Add --illegal-access=warn to the shell scripts